# infranet-team1

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: .$architecture_diagram.drawio.bkp  architecture.drawio  erd.drawio
src/infranet_team1/: aa.py  app.py  db.py  extension.py  insert.py
src/infranet_team1/models/: user.py
src/infranet_team1/repository/: task_repo.py
src/infranet_team1/routes/: __init__.py  auth_route.py  client_route.py  hr_route.py  issue_route.py  task_route.py  write_route.py
src/infranet_team1/routes/hr/: att_route.py  bp.py  emp_admin_route.py  home_route.py  hr_stats_route.py  make_password.py  vc_admin_route.py  vc_route.py
src/infranet_team1/static/css/: style.css
src/infranet_team1/templates/: base copy.html  base.html  index.html  layout.html
src/infranet_team1/templates/auth/: login.html  register.html
src/infranet_team1/templates/client/: create.html  detail.html  edit.html  index.html  list.html
src/infranet_team1/templates/hr/: attendance.html  emp_admin_detail.html  emp_admin_list.html  emp_profile.html  hr_stats.html  index.html  vc_admin_list.html  vc_apply.html  vc_edit.html  vc_list.html
src/infranet_team1/templates/issue/: detail.html  index.html  list.html  stats.html  update.html  write.html
src/infranet_team1/templates/task/: add.html  edit.html  index.html  stat.html
src/intranet_team1/: app.py  db.py
src/intranet_team1/routes/: auth_route.py  client_route.py  issue_route.py  task_route.py  write_route.py
src/intranet_team1/templates/: base.html  index.html
(+23 files in other folders)
